# rpi-yt-streamer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  janssondump.json  main  main.c  make.sh  setup.sh  🇫🇮 Linus Torvalds announces Linux 1.0 @ Helsinki, Finland (Finnish) [M-X0Yx28Me0].webm
cmake/: color.cmake  config.cmake
dl_path/: 1752581990.webm  1752582794.webm  1752582910.json  1752582910.webm
service/: yt-dlp-server.service
src/: f.ytdlp.c  help.h  main.c  main.old.c  sigact.c  sigact.h  test.c  utils.h  yt-dlp.c  ytdlp.c  ytdlp.h
src/testpython/: gcc.sh  testpython.c
